jsoup changelog

*** Release 1.9.2 [PENDING]
 * In XML documents, detect the charset from the XML prolog - <?xml encoding="UTF-8"?>
   <https://github.com/jhy/jsoup/issues/701>

 * Fixed an issue where created XML documents would have an incorrect prolog.
   <https://github.com/jhy/jsoup/issues/652>

 * Fixed an issue where namespaced tags (like <fb:comment>) would cause Element.cssSelector() to fail.
   <https://github.com/jhy/jsoup/pull/677>

 * Fixed an issue where tag names that contained non-ascii characters but started with an ascii character
   would cause the parser to get stuck.
   <https://github.com/jhy/jsoup/issues/704>

*** Release 1.9.1 [2016-Apr-16]
 * Added support for HTTP and SOCKS request proxies, specifiable per connection.
   <https://github.com/jhy/jsoup/pull/570>

 * Added support for sending plain HTTP request bodies in POST and PUT requests, with Connection.requestBody(String).

 * Added support in Jsoup.Connect for HEAD, OPTIONS, TRACE.
   <https://github.com/jhy/jsoup/issues/613>

 * Added support for HTTP 307 Temporary Redirect (replays posts, if applicable).
   <https://github.com/jhy/jsoup/pull/666>

 * Performance improvements when parsing HTML, particularly for Android Dalvik.

 * Added support for writing HTML into Appendable objects (like OutputStreamWriter), to enable stream serialization.
   <https://github.com/jhy/jsoup/pull/470/>

 * Added support for XML namespaces when converting jsoup documents to W3C documents.
   <https://github.com/jhy/jsoup/pull/672>

 * Added support for UTF-16 and UTF-32 character set detection from byte-order-marks (BOM).
   <https://github.com/jhy/jsoup/issues/695>

 * Added support for tags with non-ascii (unicode) letters.
   <https://github.com/jhy/jsoup/issues/667>

 * Added Connection.data(key) to retrieve a data KeyVal by its key. Useful to update form data before submission.

 * Fixed an issue in the Parent selector where it would not match against the root element it was applied to.